# uKanren_transformations

./: .gitignore  .stylish-haskell.yaml  ChangeLog.md  Driver.hs  LICENSE  Main.hs  Makefile  MuKanren.hs  Programs.hs  README.md  bottles.pl  build  ecce_plain.txt  ecce_prop_last.txt  inputs.csv  log  mktransform.cabal  package-lock.json  package.json  package.yaml  path_relation_ground.path  run  run_fun.sh  sinterp  stack.yaml  uKanren-transformation.cabal  uKanren-transformations.cabal
app/: Main.hs
app/bench/: Main.hs
app/console/: AllTransformationsApp.hs  AnnotationsSettingApp.hs  CPDApp.hs  ConsPDApp.hs  DepApp.hs  EvalApp.hs  FunTransformerApp.hs  Main.hs  ModeApp.hs  NormalizeApp.hs  OfflineDeductionApp.hs  ParseApp.hs  PrintProgs.hs  TerminationCheckApp.hs  TranslateApp.hs  UpdatedTranslate.hs
bench/: comparisons.txt
modded/: wgc.1.mk
num/num/: num.ml
papers/: main.tex
src/: AnnotatedDef.hs  AnnotatedProgram.hs  AnnotationType.hs  Bool.hs  CPD.hs  CpdResidualization.hs  Data.hs  DataShow.hs  Def.hs  Definitions.hs  Descend.hs  Driver.hs  Driving.hs  Embed.hs  Environment.hs  Eval.hs  ForConj.hs  FreshNames.hs  Generalization.hs  GlobalControl.hs  GlobalTreePrinter.hs  InductiveCheck.hs  InvokeAnnotation.hs  List.hs  Main.hs  MiniKanren.hs  MuKanren.hs  NonConjunctive.hs  NormalizedSyntax.hs  Num.hs  OCanrenize.hs  Parser.hs  PartialDeduction.hs  PrintTree.hs  PrintingTest.hs  Program.hs  Programs.hs  Purification.hs  Residualization.hs  Residualize.hs  (+18 more)
test/: BridgeTest.hs  CpdTest.hs  DrivingTest.hs  EmbedTest.hs  InductiveCheckTest.hs  Main.hs  OCanrenizeTest.hs  OldTest.hs  PrintingTest.hs  ResidualizeTest.hs  SomeTest.hs  Test.hs  Test.orig  TestFramework.hs  TestMain.hs  appendo2.ml  test.sh
translation/: num.mk
utils/: ConjRetriever.hs  DotPrinter.hs  Miscellaneous.hs
(+1599 files in other folders)
