name: mktransform
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

executable mktransform
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        text -any,
        fgl -any,
        containers -any,
        process -any,
        temporary -any,
        graphviz -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Bool
        Driving
        Eval
        List
        Num
        PrintingTest
        Programs
        Residualize
        Sort
        Stlc
        Stream
        Syntax
        Term
        Test 
        Tree
        TreePrinter
    ghc-options: -ferror-spans

test-suite test-mktransform
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
